# FleetManager

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  conanfile.txt  docker-compose.yml
include/FleetManager/Common/Entitys/: User.h
include/FleetManager/Common/Models/: Result.h
include/FleetManager/Common/Models/Errors/: Error.h  UserError.h
include/FleetManager/Controllers/: UsersController.h
include/FleetManager/Interfaces/: IUsersService.h
include/FleetManager/Middlewares/: AuthMiddleware.h
include/FleetManager/Services/: UsersService.h  usersService.h
src/: main.cpp
src/Controllers/: CMakeLists.txt  UsersController.cpp
src/Database/: build_database.sql
src/Middlewares/: AuthMiddleware.cpp  CMakeLists.txt
src/Services/: CMakeLists.txt  UsersService.cpp
src/database/: build_database.sql
